[gd_scene load_steps=42 format=4 uid="uid://m2ccf743egca"]

[ext_resource type="Script" path="res://Rooms/RoomScript/Room6.gd" id="1_qwvog"]
[ext_resource type="Texture2D" uid="uid://c2dvhcw4hsca4" path="res://Art/32x32 tileset/32x32 first tileset.png" id="2_oduuf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g5d7e"]
texture = ExtResource("2_oduuf")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0

[sub_resource type="TileSet" id="TileSet_f3kae"]

tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_g5d7e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdqpu"]
size = Vector2(129, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sf2a"]
size = Vector2(20, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sddfr"]
size = Vector2(20, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1er3x"]
size = Vector2(126, 210)

[node name="Room6" type="Node2D"]
script = ExtResource("1_qwvog")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_f3kae")
format = 2
layer_0/tile_data = PackedInt32Array(1310750, 524288, 5, 1310751, 524288, 5)

[node name="Ground" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAIAAAAIAAUAAAAAAAMAAAAIAAUAAAAAAAQAAAAIAAUAAAABAAQAAAAIAAUAAAACAAQAAAAIAAUAAAADAAQAAAAIAAUAAAAEAAQAAAAIAAUAAAAFAAQAAAAIAAUAAAAGAAQAAAAIAAUAAAAHAAQAAAAIAAUAAAAIAAQAAAAIAAUAAAAIAAMAAAAIAAUAAAAHAAMAAAAIAAUAAAAGAAMAAAAIAAUAAAAFAAMAAAAIAAUAAAAEAAMAAAAIAAUAAAADAAMAAAAIAAUAAAACAAMAAAAIAAUAAAABAAMAAAAIAAUAAAABAAIAAAAIAAUAAAACAAIAAAAIAAUAAAADAAIAAAAIAAUAAAAEAAIAAAAIAAUAAAAFAAIAAAAIAAUAAAAGAAIAAAAIAAUAAAAHAAIAAAAIAAUAAAAIAAIAAAAIAAUAAAAJAAIAAAAIAAUAAAAKAAIAAAAIAAUAAAALAAIAAAAIAAUAAAAMAAMAAAAHAAIAAAANAAQAAAADAAIAAAANAAUAAAADAAIAAAANAAYAAAADAAIAAAAMAAcAAAAHAAIAAAALAAgAAAAIAAUAAAALAAkAAAAIAAUAAAAKAAkAAAAIAAUAAAAJAAQAAAAIAAUAAAAKAAQAAAAIAAUAAAALAAQAAAAIAAUAAAAJAAMAAAAIAAUAAAAKAAMAAAAIAAUAAAALAAMAAAAIAAUAAAAMAAQAAAAHAAIAAAAMAAUAAAAHAAIAAAAMAAYAAAAHAAIAAAALAAcAAAAIAAUAAAAJAAgAAAAIAAUAAAAKAAgAAAAIAAUAAAAKAAcAAAAIAAUAAAAJAAkAAAAIAAUAAAALAAYAAAAIAAUAAAAJAAoAAAAIAAUAAAAKAAoAAAAIAAUAAAALAAoAAAAIAAUAAAALAAsAAAAIAAUAAAAKAAsAAAAIAAUAAAAJAAsAAAAIAAUAAAAJAAwAAAAIAAUAAAAKAAwAAAAIAAUAAAALAAwAAAAIAAUAAAALAA0AAAAIAAUAAAAKAA0AAAAIAAUAAAAJAA0AAAAIAAUAAAAJAA4AAAAIAAUAAAAKAA4AAAAIAAUAAAAKAA8AAAAIAAUAAAALAA8AAAAIAAUAAAALABAAAAAIAAUAAAAMABAAAAAKAAcAAAAMAA8AAAAIAAUAAAALAA4AAAAIAAUAAAAMAA4AAAAIAAUAAAATABEAAAAIAAEAAAATABAAAAAIAAUAAAAUAA8AAAAIAAUAAAAUABAAAAAIAAUAAAAVABAAAAAIAAUAAAAUABEAAAAIAAEAAAAVABEAAAAIAAEAAAAVAA8AAAAIAAUAAAAWABAAAAAIAAUAAAAWAA8AAAAIAAUAAAAWAA4AAAAIAAUAAAAVAA4AAAAJAAMAAAAWAA0AAAAJAAMAAAAXAA0AAAAIAAUAAAAXAA4AAAAIAAUAAAAXAA8AAAAIAAUAAAAYAA4AAAAIAAUAAAAYAA0AAAAIAAUAAAAYAAwAAAAIAAUAAAAXAAwAAAAJAAMAAAAYAAsAAAAJAAMAAAAZAAsAAAAIAAUAAAAZAAwAAAAIAAUAAAAZAA0AAAAIAAUAAAAaAAwAAAAIAAUAAAAaAAsAAAAIAAUAAAAaAAoAAAAIAAUAAAAZAAoAAAAJAAMAAAAbAAoAAAAIAAUAAAAbAAsAAAAIAAUAAAAbAAwAAAAIAAUAAAAcAAwAAAAIAAUAAAAdAAwAAAAIAAUAAAAeAAwAAAAIAAUAAAAfAAwAAAAIAAUAAAAgAAwAAAAIAAUAAAAhAAwAAAAIAAUAAAAiAAwAAAAIAAUAAAAjAAwAAAAIAAUAAAAjAAsAAAAIAAUAAAAjAAoAAAAIAAUAAAAiAAoAAAAIAAUAAAAhAAoAAAAIAAUAAAAgAAoAAAAIAAUAAAAfAAoAAAAIAAUAAAAeAAoAAAAIAAUAAAAdAAoAAAAIAAUAAAAcAAoAAAAIAAUAAAAcAAsAAAAIAAUAAAAdAAsAAAAIAAUAAAAeAAsAAAAIAAUAAAAfAAsAAAAIAAUAAAAgAAsAAAAIAAUAAAAhAAsAAAAIAAUAAAAiAAsAAAAIAAUAAAAeAA0AAAAIAAUAAAAeAA4AAAAIAAUAAAAeAA8AAAAIAAUAAAAeABAAAAAIAAUAAAAeABEAAAAIAAUAAAAeABIAAAAIAAUAAAAeABMAAAALAAYAAAAfABMAAAALAAYAAAAgABMAAAALAAYAAAAgABIAAAAIAAUAAAAgABEAAAAIAAUAAAAgABAAAAAIAAUAAAAgAA8AAAAIAAUAAAAgAA4AAAAIAAUAAAAgAA0AAAAIAAUAAAAfAA0AAAAIAAUAAAAfAA4AAAAIAAUAAAAfAA8AAAAIAAUAAAAfABAAAAAIAAUAAAAfABEAAAAIAAUAAAAfABIAAAAIAAUAAAAAAAEAAAAIAAMAAAABAAEAAAAIAAMAAAACAAEAAAAIAAMAAAADAAEAAAAIAAMAAAAEAAEAAAAIAAMAAAAFAAEAAAAIAAMAAAAGAAEAAAAIAAMAAAAHAAEAAAAIAAMAAAAIAAEAAAAIAAMAAAAJAAEAAAAIAAMAAAAKAAEAAAAIAAMAAAALAAEAAAAIAAMAAAAaAAkAAAAIAAMAAAAbAAkAAAAIAAMAAAAcAAkAAAAIAAMAAAAdAAkAAAAIAAMAAAAeAAkAAAAIAAMAAAAfAAkAAAAIAAMAAAAgAAkAAAAIAAMAAAAhAAkAAAAIAAMAAAAiAAkAAAAIAAMAAAAjAAkAAAAIAAMAAAAbAA0AAAAIAAEAAAAcAA0AAAAIAAEAAAAdAA0AAAAJAAEAAAAhAA0AAAAHAAEAAAAiAA0AAAAIAAEAAAAjAA0AAAAIAAEAAAAhAA4AAAAHAAIAAAAhAA8AAAAHAAIAAAAhABAAAAAHAAIAAAAhABEAAAAHAAIAAAAhABIAAAAHAAIAAAAhABMAAAAMAAYAAAAdABMAAAAKAAYAAAAdABIAAAAJAAIAAAAdABAAAAAJAAIAAAAdAA8AAAAJAAIAAAAdAA4AAAAJAAIAAAAMABMAAAAIAAgAAAANABMAAAAIAAgAAAAOABMAAAAIAAgAAAAPABMAAAAIAAgAAAAPABIAAAAIAAgAAAAOABIAAAAIAAgAAAANABIAAAAIAAgAAAANABEAAAAIAAgAAAAOABEAAAAIAAgAAAAOABAAAAAIAAgAAAAPABAAAAAIAAgAAAAPABEAAAAIAAgAAAAQABEAAAAIAAgAAAAQABIAAAAIAAgAAAAQABAAAAAIAAgAAAARABAAAAAIAAgAAAARAA8AAAAIAAgAAAARAA4AAAAIAAgAAAASAA4AAAAIAAgAAAAQAA4AAAAIAAgAAAAQAA8AAAAIAAgAAAAPAA8AAAAIAAgAAAAQAA0AAAAIAAgAAAARAA0AAAAIAAgAAAARAAwAAAAIAAgAAAARAAsAAAAIAAgAAAASAAsAAAAIAAgAAAASAAwAAAAIAAgAAAASAA0AAAAIAAgAAAATAA0AAAAIAAgAAAATAAwAAAAIAAgAAAATAAsAAAAIAAgAAAATAAoAAAAIAAgAAAAUAAoAAAAIAAgAAAAUAAsAAAAIAAgAAAAVAAoAAAAIAAgAAAAVAAkAAAAIAAgAAAAVAAgAAAAIAAgAAAAWAAgAAAAIAAgAAAAWAAcAAAAIAAgAAAAWAAYAAAAIAAgAAAAXAAYAAAAIAAgAAAAXAAUAAAAIAAgAAAAXAAQAAAAIAAgAAAAXAAMAAAAIAAgAAAAXAAIAAAAIAAgAAAAYAAIAAAAIAAgAAAAYAAEAAAAIAAgAAAAYAAAAAAAIAAgAAAAXAAAAAAAIAAgAAAAWAAAAAAAIAAgAAAAWAAEAAAAIAAgAAAAXAAEAAAAIAAgAAAAWAAIAAAAIAAgAAAAWAAMAAAAIAAgAAAAWAAQAAAAIAAgAAAAWAAUAAAAIAAgAAAAVAAUAAAAIAAgAAAAVAAQAAAAIAAgAAAAVAAMAAAAIAAgAAAAVAAYAAAAIAAgAAAAVAAcAAAAIAAgAAAAUAAcAAAAIAAgAAAAUAAYAAAAIAAgAAAAUAAUAAAAIAAgAAAAUAAgAAAAIAAgAAAAUAAkAAAAIAAgAAAATAAkAAAAIAAgAAAATAAgAAAAIAAgAAAATAAcAAAAIAAgAAAASAAoAAAAIAAgAAAASAAkAAAAIAAgAAAAQAAsAAAAHAAgAAAARAAkAAAAHAAgAAAASAAcAAAAHAAgAAAATAAUAAAAHAAgAAAAUAAMAAAAHAAgAAAAVAAEAAAAHAAgAAAAVAAAAAAAHAAgAAAAPAA0AAAAHAAgAAAAMABEAAAAJAAYAAAALABMAAAAHAAgAAAAMABQAAAAIAAgAAAANABQAAAAIAAgAAAAOABQAAAAIAAgAAAAPABQAAAAIAAgAAAALABQAAAAMAAMAAAAKABQAAAAHAAcAAAALABIAAAAHAAcAAAAOAA4AAAAIAAMAAAAPAAwAAAAHAAcAAAAQAAoAAAAHAAcAAAARAAgAAAAHAAcAAAASAAYAAAAHAAcAAAATAAQAAAAHAAcAAAAUAAIAAAAHAAcAAAAZAAAAAAAKAAIAAAAZAAEAAAAKAAIAAAAZAAIAAAAKAAIAAAAYAAQAAAAKAAIAAAAYAAUAAAAKAAIAAAAYAAYAAAAKAAIAAAAXAAgAAAAKAAIAAAAWAAoAAAAKAAIAAAAUAA0AAAAKAAIAAAARABIAAAAKAAIAAAAQABQAAAAKAAIAAAAQABMAAAAKAAEAAAARABEAAAAKAAEAAAATAA4AAAAHAAQAAAAUAAwAAAAKAAEAAAAVAAsAAAAKAAEAAAAWAAkAAAAKAAEAAAAXAAcAAAAKAAEAAAAYAAMAAAAKAAEAAAAZAAMAAAAJAAkAAAAYAAcAAAAJAAkAAAAXAAkAAAAJAAkAAAAVAAwAAAAJAAkAAAAUAA4AAAAIAAMAAAARABMAAAAJAAkAAAAPAA4AAAAMAAMAAAAQAAwAAAAMAAMAAAARAAoAAAAMAAMAAAASAAgAAAAMAAMAAAATAAYAAAAMAAMAAAAUAAQAAAAMAAMAAAAVAAIAAAAMAAMAAAAOAA8AAAAJAAYAAAANAA8AAAAKAAcAAAANABAAAAAJAAYAAAASAA8AAAAHAAQAAAATAA8AAAAMAAkAAAASABAAAAAHAAUAAAASABEAAAAIAAEAAAASABIAAAADAAIAAAATABIAAAADAAIAAAAUABIAAAADAAIAAAAVABIAAAADAAIAAAAMAAoAAAAHAAIAAAAMAAsAAAAHAAIAAAAMAAwAAAAHAAIAAAAMAA0AAAAHAAMAAAAIAA0AAAAJAAIAAAAIAAwAAAAJAAIAAAAIAAsAAAAJAAIAAAAIAAoAAAAJAAIAAAAIAAkAAAAJAAIAAAADAAwAAAADAAIAAAADAAsAAAADAAIAAAADAAoAAAADAAIAAAADAAkAAAADAAIAAAADAAgAAAADAAIAAAADAAcAAAADAAIAAAADAAYAAAADAAIAAAACAAYAAAADAAIAAAABAAYAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAIAAAAAAAsAAAADAAIAAAAAAAwAAAADAAIAAAAAAA0AAAADAAIAAAAAAA4AAAADAAIAAAAAAA8AAAADAAIAAAAAABAAAAADAAIAAAAAABEAAAADAAIAAAAAABIAAAADAAIAAAAAABMAAAADAAIAAAAAABQAAAADAAIAAAABABQAAAADAAIAAAABABMAAAADAAIAAAABABIAAAADAAIAAAABABEAAAADAAIAAAABABAAAAADAAIAAAABAA8AAAADAAIAAAABAA4AAAADAAIAAAABAA0AAAADAAIAAAABAAwAAAADAAIAAAABAAsAAAADAAIAAAABAAoAAAADAAIAAAABAAkAAAADAAIAAAABAAgAAAADAAIAAAABAAcAAAADAAIAAAACAAcAAAADAAIAAAACAAgAAAADAAIAAAACAAkAAAADAAIAAAACAAoAAAADAAIAAAACAAsAAAADAAIAAAACAAwAAAADAAIAAAACAA0AAAADAAIAAAACAA4AAAADAAIAAAACAA8AAAADAAIAAAACABAAAAADAAIAAAACABEAAAADAAIAAAACABIAAAADAAIAAAACABMAAAADAAIAAAACABQAAAADAAIAAAADABQAAAADAAIAAAADABMAAAADAAIAAAADABIAAAADAAIAAAADABEAAAADAAIAAAADABAAAAADAAIAAAADAA8AAAADAAIAAAADAA4AAAADAAIAAAADAA0AAAADAAIAAAAEAA0AAAADAAIAAAAEAAwAAAADAAIAAAAEAAsAAAADAAIAAAAEAAoAAAADAAIAAAAEAAkAAAADAAIAAAAEAAgAAAADAAIAAAAEAAcAAAADAAIAAAAEAAYAAAADAAIAAAAFAAYAAAADAAIAAAAFAAcAAAADAAIAAAAFAAgAAAADAAIAAAAFAAkAAAADAAIAAAAFAAoAAAADAAIAAAAFAAsAAAADAAIAAAAFAAwAAAADAAIAAAAFAA0AAAADAAIAAAAFAA4AAAADAAIAAAAEAA4AAAADAAIAAAAEAA8AAAADAAIAAAAEABAAAAADAAIAAAAEABEAAAADAAIAAAAEABIAAAADAAIAAAAEABMAAAADAAIAAAAEABQAAAADAAIAAAAFABQAAAADAAIAAAAFABMAAAADAAIAAAAFABIAAAADAAIAAAAFABEAAAADAAIAAAAFABAAAAADAAIAAAAFAA8AAAADAAIAAAAGAA8AAAADAAIAAAAGAA4AAAADAAIAAAAGAA0AAAADAAIAAAAGAAwAAAADAAIAAAAGAAsAAAADAAIAAAAGAAoAAAADAAIAAAAGAAkAAAADAAIAAAAGAAgAAAADAAIAAAAGAAcAAAADAAIAAAAGAAYAAAADAAIAAAAHAAYAAAADAAIAAAAHAAcAAAADAAIAAAAHAAgAAAADAAIAAAAHAAkAAAADAAIAAAAHAAoAAAADAAIAAAAHAAsAAAADAAIAAAAHAAwAAAADAAIAAAAHAA0AAAADAAIAAAAHAA4AAAADAAIAAAAHAA8AAAADAAIAAAAHABAAAAADAAIAAAAGABAAAAADAAIAAAAGABEAAAADAAIAAAAGABIAAAADAAIAAAAGABMAAAADAAIAAAAGABQAAAADAAIAAAAHABQAAAADAAIAAAAHABMAAAADAAIAAAAHABIAAAADAAIAAAAHABEAAAADAAIAAAAIABEAAAADAAIAAAAIABAAAAADAAIAAAAIAA8AAAAKAAYAAAAIAA4AAAAJAAIAAAAJAA8AAAAJAAEAAAAJABAAAAAKAAYAAAAJABEAAAADAAIAAAAJABIAAAADAAIAAAAIABIAAAADAAIAAAAIABMAAAADAAIAAAAIABQAAAADAAIAAAAJABQAAAADAAIAAAAJABMAAAADAAIAAAAKABMAAAADAAIAAAAKABIAAAADAAIAAAAKABEAAAAKAAYAAAAKABAAAAAJAAEAAAALABEAAAAIAAEAAAAIAAgAAAAJAAIAAAAKAAYAAAAIAAUAAAALAAUAAAAIAAUAAAAPAAgAAAADAAIAAAAPAAcAAAADAAIAAAAPAAQAAAADAAIAAAAPAAMAAAADAAIAAAAPAAIAAAADAAIAAAAPAAEAAAADAAIAAAAPAAAAAAADAAIAAAAOAAAAAAADAAIAAAANAAAAAAADAAIAAAAMAAAAAAADAAIAAAALAAAAAAADAAIAAAAKAAAAAAADAAIAAAAJAAAAAAADAAIAAAAIAAAAAAADAAIAAAAHAAAAAAADAAIAAAAGAAAAAAADAAIAAAAFAAAAAAADAAIAAAAEAAAAAAADAAIAAAADAAAAAAADAAIAAAACAAAAAAADAAIAAAABAAAAAAADAAIAAAAAAAAAAAADAAIAAAAMAAEAAAAMAAQAAAANAAEAAAADAAIAAAAOAAIAAAADAAIAAAAOAAEAAAADAAIAAAAQAAAAAAADAAIAAAAQAAEAAAADAAIAAAAQAAIAAAADAAIAAAAQAAMAAAADAAIAAAAQAAQAAAADAAIAAAAQAAUAAAADAAIAAAAQAAYAAAADAAIAAAAQAAcAAAADAAIAAAAQAAgAAAADAAIAAAAQAAkAAAADAAIAAAAPAAkAAAADAAIAAAAOAAkAAAADAAIAAAAOAAgAAAADAAIAAAANAAkAAAADAAIAAAANAAoAAAADAAIAAAANAAsAAAADAAIAAAANAAwAAAADAAIAAAANAA0AAAAMAAQAAAANAA4AAAAHAAMAAAAOAA0AAAADAAIAAAAOAAwAAAADAAIAAAAOAAsAAAADAAIAAAAOAAoAAAADAAIAAAAPAAoAAAADAAIAAAAPAAsAAAADAAIAAAARAAcAAAADAAIAAAARAAYAAAADAAIAAAARAAUAAAADAAIAAAARAAQAAAADAAIAAAARAAMAAAADAAIAAAARAAIAAAADAAIAAAARAAEAAAADAAIAAAARAAAAAAADAAIAAAASAAAAAAADAAIAAAASAAEAAAADAAIAAAASAAIAAAADAAIAAAASAAMAAAADAAIAAAASAAQAAAADAAIAAAASAAUAAAADAAIAAAATAAMAAAADAAIAAAATAAIAAAADAAIAAAATAAEAAAADAAIAAAATAAAAAAADAAIAAAAUAAAAAAADAAIAAAAUAAEAAAADAAIAAAAcAAcAAAADAAIAAAAcAAYAAAADAAIAAAAcAAUAAAADAAIAAAAcAAQAAAADAAIAAAAcAAMAAAADAAIAAAAcAAIAAAADAAIAAAAcAAEAAAADAAIAAAAcAAAAAAADAAIAAAAbAAAAAAADAAIAAAAaAAAAAAADAAIAAAAaAAEAAAADAAIAAAAaAAIAAAADAAIAAAAaAAMAAAADAAIAAAAaAAQAAAADAAIAAAAZAAQAAAADAAIAAAAZAAUAAAADAAIAAAAZAAYAAAADAAIAAAAZAAcAAAADAAIAAAAZAAgAAAADAAIAAAAYAAgAAAADAAIAAAAYAAkAAAADAAIAAAAYAAoAAAAKAAQAAAAXAAoAAAADAAIAAAAXAAsAAAAKAAQAAAAaAAgAAAADAAIAAAAaAAcAAAADAAIAAAAaAAYAAAADAAIAAAAaAAUAAAADAAIAAAAbAAUAAAADAAIAAAAbAAQAAAADAAIAAAAbAAMAAAADAAIAAAAbAAIAAAADAAIAAAAbAAEAAAADAAIAAAAbAAYAAAADAAIAAAAbAAcAAAADAAIAAAAbAAgAAAADAAIAAAAcAAgAAAADAAIAAAAdAAgAAAADAAIAAAAdAAcAAAADAAIAAAAdAAYAAAADAAIAAAAdAAUAAAADAAIAAAAdAAQAAAADAAIAAAAdAAMAAAADAAIAAAAdAAIAAAADAAIAAAAdAAEAAAADAAIAAAAdAAAAAAADAAIAAAAeAAAAAAADAAIAAAAeAAEAAAADAAIAAAAeAAIAAAADAAIAAAAeAAMAAAADAAIAAAAeAAQAAAADAAIAAAAeAAUAAAADAAIAAAAeAAYAAAADAAIAAAAeAAcAAAADAAIAAAAeAAgAAAADAAIAAAAfAAgAAAADAAIAAAAfAAcAAAADAAIAAAAfAAYAAAADAAIAAAAfAAUAAAADAAIAAAAfAAQAAAADAAIAAAAfAAMAAAADAAIAAAAfAAIAAAADAAIAAAAfAAEAAAADAAIAAAAfAAAAAAADAAIAAAAgAAAAAAADAAIAAAAgAAEAAAADAAIAAAAgAAIAAAADAAIAAAAgAAMAAAADAAIAAAAgAAQAAAADAAIAAAAgAAUAAAADAAIAAAAgAAYAAAADAAIAAAAgAAcAAAADAAIAAAAgAAgAAAADAAIAAAAhAAgAAAADAAIAAAAhAAcAAAADAAIAAAAhAAYAAAADAAIAAAAhAAUAAAADAAIAAAAhAAQAAAADAAIAAAAhAAMAAAADAAIAAAAhAAIAAAADAAIAAAAhAAEAAAADAAIAAAAhAAAAAAADAAIAAAAiAAAAAAADAAIAAAAiAAEAAAADAAIAAAAiAAIAAAADAAIAAAAiAAMAAAADAAIAAAAiAAQAAAADAAIAAAAiAAUAAAADAAIAAAAiAAYAAAADAAIAAAAiAAcAAAADAAIAAAAiAAgAAAADAAIAAAAjAAgAAAADAAIAAAAjAAcAAAADAAIAAAAjAAYAAAADAAIAAAAjAAUAAAADAAIAAAAjAAQAAAADAAIAAAAjAAMAAAADAAIAAAAjAAIAAAADAAIAAAAjAAEAAAADAAIAAAAjAAAAAAADAAIAAAAWAAwAAAAKAAQAAAAVAA0AAAAKAAQAAAAaABAAAAADAAIAAAAaAA8AAAADAAIAAAAaAA4AAAAMAAYAAAAaAA0AAAAHAAEAAAAZAA4AAAAHAAEAAAAZAA8AAAAMAAYAAAAYAA8AAAAHAAEAAAAYABAAAAAMAAYAAAAXABAAAAAHAAEAAAAXABEAAAAMAAYAAAAWABEAAAAIAAEAAAAWABIAAAADAAIAAAAWABMAAAADAAIAAAAVABMAAAADAAIAAAAUABMAAAADAAIAAAATABMAAAADAAIAAAASABMAAAADAAIAAAASABQAAAADAAIAAAARABQAAAADAAIAAAATABQAAAADAAIAAAAUABQAAAADAAIAAAAVABQAAAADAAIAAAAWABQAAAADAAIAAAAXABQAAAADAAIAAAAXABMAAAADAAIAAAAXABIAAAADAAIAAAAYABIAAAADAAIAAAAYABEAAAADAAIAAAAZABEAAAADAAIAAAAZABAAAAADAAIAAAAZABIAAAADAAIAAAAZABMAAAADAAIAAAAYABMAAAADAAIAAAAYABQAAAADAAIAAAAZABQAAAADAAIAAAAaABQAAAADAAIAAAAaABMAAAADAAIAAAAaABIAAAADAAIAAAAaABEAAAADAAIAAAAbABAAAAADAAIAAAAbAA8AAAADAAIAAAAbAA4AAAADAAIAAAAcAA4AAAADAAIAAAAcAA8AAAADAAIAAAAcABAAAAADAAIAAAAcABIAAAADAAIAAAAbABIAAAADAAIAAAAbABMAAAADAAIAAAAbABQAAAADAAIAAAAcABQAAAADAAIAAAAcABMAAAADAAIAAAAdABQAAAADAAIAAAAeABQAAAADAAIAAAAfABQAAAADAAIAAAAgABQAAAADAAIAAAAhABQAAAADAAIAAAAiABQAAAADAAIAAAAiABMAAAADAAIAAAAiABIAAAADAAIAAAAiABEAAAADAAIAAAAiABAAAAADAAIAAAAiAA8AAAADAAIAAAAiAA4AAAADAAIAAAAjAA4AAAADAAIAAAAjAA8AAAADAAIAAAAjABAAAAADAAIAAAAjABEAAAADAAIAAAAjABIAAAADAAIAAAAjABMAAAADAAIAAAAjABQAAAADAAIAAAAcABEAAAADAAIAAAAbABEAAAADAAIAAAAMAAkAAAAHAAIAAAAJAAcAAAAIAAUAAAAMAAIAAAAHAAIAAAANAAMAAAADAAIAAAAOAAQAAAADAAIAAAAOAAUAAAADAAIAAAAOAAYAAAADAAIAAAANAAcAAAADAAIAAAAMAAgAAAAHAAIAAAANAAgAAAADAAIAAAAOAAcAAAADAAIAAAAOAAMAAAADAAIAAAANAAIAAAADAAIAAAAIAAcAAAAJAAIAAAAIAAYAAAAJAAIAAAAJAAYAAAAIAAUAAAAJAAUAAAAIAAUAAAAIAAUAAAAJAAEAAAAHAAUAAAAIAAEAAAAGAAUAAAAIAAEAAAAFAAUAAAAIAAEAAAAEAAUAAAAIAAEAAAADAAUAAAAIAAEAAAACAAUAAAAIAAEAAAABAAUAAAAIAAEAAAAAAAUAAAAIAAEAAAAKAAUAAAAIAAUAAAAPAAUAAAADAAIAAAAPAAYAAAADAAIAAAAdABEAAAAJAAIAAAAZAAkAAAAKAAQAAAAWAAsAAAAJAAkAAAAMABIAAAAIAAgAAAA=")
tile_set = SubResource("TileSet_f3kae")

[node name="Plants" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAFAAkAAAALAAMAAAASAAMAAAALAAMAAAAaABEAAQAbAAQAAAADAAUAAQAaAAAAAAADAAYAAQAaAAEAAAADAAcAAQAaAAIAAAAEAAUAAQAbAAAAAAAEAAYAAQAbAAEAAAAEAAcAAQAbAAIAAAAFAAUAAQAcAAAAAAAFAAYAAQAcAAEAAAAFAAcAAQAcAAIAAAANAAkAAQAaAAAAAAANAAoAAQAaAAEAAAANAAsAAQAaAAIAAAAOAAkAAQAbAAAAAAAOAAoAAQAbAAEAAAAOAAsAAQAbAAIAAAAPAAkAAQAcAAAAAAAPAAoAAQAcAAEAAAAPAAsAAQAcAAIAAAAPAAEAAQAaAAAAAAAPAAIAAQAaAAEAAAAPAAMAAQAaAAIAAAAQAAEAAQAbAAAAAAAQAAIAAQAbAAEAAAAQAAMAAQAbAAIAAAARAAEAAQAcAAAAAAARAAIAAQAcAAEAAAARAAMAAQAcAAIAAAAbAAUAAQAaAAAAAAAbAAYAAQAaAAEAAAAbAAcAAQAaAAIAAAAcAAUAAQAbAAAAAAAcAAYAAQAbAAEAAAAcAAcAAQAbAAIAAAAdAAUAAQAcAAAAAAAdAAYAAQAcAAEAAAAdAAcAAQAcAAIAAAAZABAAAQAaAAMAAAAZABEAAQAaAAQAAAAZABIAAQAaAAUAAAAaABAAAQAbAAMAAAAaABIAAQAbAAUAAAAbABAAAQAcAAMAAAAbABEAAQAcAAQAAAAbABIAAQAcAAUAAAAHABEAAQAcAAgAAAAHABIAAQAcAAkAAAAIABEAAQAdAAgAAAAIABIAAQAdAAkAAAABAAkAAQAcAAgAAAABAAoAAQAcAAkAAAACAAkAAQAdAAgAAAACAAoAAQAdAAkAAAAhAAEAAQAcAAgAAAAhAAIAAQAcAAkAAAAiAAEAAQAdAAgAAAAiAAIAAQAdAAkAAAAhAA0AAQAaAAYAAAAhAA4AAQAaAAcAAAAiAA0AAQAbAAYAAAAiAA4AAQAbAAcAAAAUABIAAQAaAAYAAAAUABMAAQAaAAcAAAAVABIAAQAbAAYAAAAVABMAAQAbAAcAAAAFAAoAAQAaAAYAAAAFAAsAAQAaAAcAAAAGAAoAAQAbAAYAAAAGAAsAAQAbAAcAAAACAAAAAQAaAAYAAAACAAEAAQAaAAcAAAADAAAAAQAbAAYAAAADAAEAAQAbAAcAAAAgAAcAAQAaAAYAAAAgAAgAAQAaAAcAAAAhAAcAAQAbAAYAAAAhAAgAAQAbAAcAAAAHAA4AAQAOAAUAAAAEAAkAAQAOAAUAAAAIAAYAAQAOAAUAAAAGAAEAAQAOAAUAAAANAAIAAQAOAAUAAAAQAAYAAQAOAAUAAAATAAEAAQAOAAUAAAAcAAEAAQAOAAUAAAAgAAQAAQAOAAUAAAAYAAoAAQAOAAUAAAAdAA0AAQAOAAUAAAAiABEAAQAOAAUAAAAaAAkAAQANAAcAAAAfAAIAAQANAAcAAAAaAAQAAQANAAcAAAAJAAEAAQANAAcAAAAGAAgAAQANAAcAAAABAAUAAQANAAcAAAAiABAAAQANAAcAAAAdAA8AAQANAAcAAAAJABIAAQANAAcAAAA=")
tile_set = SubResource("TileSet_yljg5")

[node name="FromR5" type="Marker2D" parent="."]
position = Vector2(33, 112)

[node name="FromR8" type="Marker2D" parent="."]
position = Vector2(1122, 367)

[node name="FromR7" type="Marker2D" parent="."]
position = Vector2(1010, 605)

[node name="ToRoom7" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom7"]
position = Vector2(1007.5, 658)
shape = SubResource("RectangleShape2D_tdqpu")

[node name="ToRoom8" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom8"]
position = Vector2(1162, 367.5)
shape = SubResource("RectangleShape2D_1sf2a")

[node name="ToRoom5" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToRoom5"]
position = Vector2(-10, 111.5)
shape = SubResource("RectangleShape2D_sddfr")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(686, 0, 688, 83, 658, 82, 656, 144, 626, 145, 624, 209, 594, 209, 592, 273, 562, 274, 559, 337, 530, 337, 528, 401, 499, 402, 496, 452, 496, 463, 480, 465, 640, 464, 640, 448, 657, 448, 656, 399, 687, 399, 687, 368, 717, 366, 720, 304, 750, 301, 751, 239, 781, 237, 783, 111, 813, 110, 815, 0, 1152, 0, 1152, 304, 1263, 304, 1263, 431, 1152, 431, 1152, 649, 1072, 648, 1072, 687, 943, 687, 943, 648, 528, 648, 527, 623, 558, 622, 560, 560, 576, 559, 384, 559, 384, 592, 369, 593, 368, 648, 0, 648, 0, 176, -120, 176, -119, 48, 0, 48, 0, 1, 686, 2, -153, -43, -153, 784, 1321, 784, 1319, -47, 813, 0)

[node name="BlockPath" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BlockPath"]
polygon = PackedVector2Array(480, 465, 480, 480, 464, 480, 464, 496, 433, 497, 432, 528, 401, 529, 400, 559, 576, 559, 576, 544, 592, 544, 592, 496, 623, 495, 624, 464)

[node name="StandingTree" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StandingTree"]
polygon = PackedVector2Array(81, 607, 92, 596, 92, 576, 68, 574, 50, 546, 73, 512, 50, 482, 87, 424, 104, 423, 148, 483, 122, 510, 149, 545, 126, 575, 106, 576, 106, 596, 117, 608)

[node name="Hitbox" type="Area2D" parent="StandingTree"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingTree/Hitbox"]
position = Vector2(99, 519)
shape = SubResource("RectangleShape2D_1er3x")

[connection signal="area_entered" from="ToRoom7" to="." method="_on_to_room_7_area_entered"]
[connection signal="area_entered" from="ToRoom8" to="." method="_on_to_room_8_area_entered"]
[connection signal="area_entered" from="ToRoom5" to="." method="_on_to_room_5_area_entered"]
[connection signal="area_entered" from="StandingTree/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="StandingTree/Hitbox" to="." method="_on_hitbox_area_exited"]
